[project]
name = "streamlit-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "azure-storage-blob>=12.28.0",
    "openai>=2.21.0",
    "pinecone>=8.1.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.54.0",
]
